{
  "version": 4,
  "terraform_version": "1.3.2",
  "serial": 1248,
  "lineage": "825e806d-5a1e-ae78-fca3-a329b91d5a34",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:354935533189:security-group/sg-038eeab7d1136766b",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-038eeab7d1136766b",
            "ingress": [],
            "name": "xpertgroup-eks-cluster-cluster-2026010905073678700000000d",
            "name_prefix": "xpertgroup-eks-cluster-cluster-",
            "owner_id": "354935533189",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "DEV",
              "Name": "xpertgroup-eks-cluster-cluster",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "DEV",
              "Name": "xpertgroup-eks-cluster-cluster",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ba44886c6f5dc02a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:354935533189:security-group/sg-016bd71f08d7fbddf",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-016bd71f08d7fbddf",
            "ingress": [],
            "name": "xpertgroup-eks-cluster-node-2026010905073663330000000c",
            "name_prefix": "xpertgroup-eks-cluster-node-",
            "owner_id": "354935533189",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "DEV",
              "Name": "xpertgroup-eks-cluster-node",
              "Terraform": "true",
              "kubernetes.io/cluster/xpertgroup-eks-cluster": "owned"
            },
            "tags_all": {
              "Environment": "DEV",
              "Name": "xpertgroup-eks-cluster-node",
              "Terraform": "true",
              "kubernetes.io/cluster/xpertgroup-eks-cluster": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ba44886c6f5dc02a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-990587350",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-038eeab7d1136766b",
            "security_group_rule_id": "sgr-0e35d310432bfa345",
            "self": false,
            "source_security_group_id": "sg-016bd71f08d7fbddf",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-1444383100",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-016bd71f08d7fbddf",
            "security_group_rule_id": "sgr-0563b370955dac1a4",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-2201058486",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-016bd71f08d7fbddf",
            "security_group_rule_id": "sgr-0781a850697fcf8a3",
            "self": false,
            "source_security_group_id": "sg-038eeab7d1136766b",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-2224066773",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-016bd71f08d7fbddf",
            "security_group_rule_id": "sgr-0db5c729c409bbebd",
            "self": false,
            "source_security_group_id": "sg-038eeab7d1136766b",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-1305671491",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-016bd71f08d7fbddf",
            "security_group_rule_id": "sgr-013743dbfefc9963d",
            "self": false,
            "source_security_group_id": "sg-038eeab7d1136766b",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-1586416482",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-016bd71f08d7fbddf",
            "security_group_rule_id": "sgr-04a1cdf6fe181b2a2",
            "self": false,
            "source_security_group_id": "sg-038eeab7d1136766b",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-976222377",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-016bd71f08d7fbddf",
            "security_group_rule_id": "sgr-01f3dbdb77b357040",
            "self": false,
            "source_security_group_id": "sg-038eeab7d1136766b",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-3634026189",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-016bd71f08d7fbddf",
            "security_group_rule_id": "sgr-0ca9824221c0f7934",
            "self": false,
            "source_security_group_id": "sg-038eeab7d1136766b",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-442753743",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-016bd71f08d7fbddf",
            "security_group_rule_id": "sgr-01f4882642d371699",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-561185460",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-016bd71f08d7fbddf",
            "security_group_rule_id": "sgr-0c7ccad92efcac547",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-2234294619",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-016bd71f08d7fbddf",
            "security_group_rule_id": "sgr-02a21561a5f3191a1",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:354935533189:network-acl/acl-0aed4dba266afc7e5",
            "default_network_acl_id": "acl-0aed4dba266afc7e5",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0aed4dba266afc7e5",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "354935533189",
            "subnet_ids": [
              "subnet-02cdea7acf3c81567",
              "subnet-0b5afb9fe17369d26",
              "subnet-0b7544d1c16b7b12f",
              "subnet-0bc6d0f5cb4184da1",
              "subnet-0df606b56780fd891"
            ],
            "tags": {
              "Environment": "DEV",
              "Name": "xpertGroup-eks-cluster",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "DEV",
              "Name": "xpertGroup-eks-cluster",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0ba44886c6f5dc02a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:354935533189:route-table/rtb-030b2e93718c48e83",
            "default_route_table_id": "rtb-030b2e93718c48e83",
            "id": "rtb-030b2e93718c48e83",
            "owner_id": "354935533189",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Environment": "DEV",
              "Name": "xpertGroup-eks-cluster",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "DEV",
              "Name": "xpertGroup-eks-cluster",
              "Terraform": "true"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0ba44886c6f5dc02a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:354935533189:security-group/sg-05ff35f64abd276a0",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-05ff35f64abd276a0",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "354935533189",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "DEV",
              "Name": "xpertGroup-eks-cluster",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "DEV",
              "Name": "xpertGroup-eks-cluster",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0ba44886c6f5dc02a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08ff67a60dbfdf66a",
            "arn": "arn:aws:ec2:us-east-1:354935533189:elastic-ip/eipalloc-08ff67a60dbfdf66a",
            "domain": "vpc",
            "id": "eipalloc-08ff67a60dbfdf66a",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-100-51-159-151.compute-1.amazonaws.com",
            "public_ip": "100.51.159.151",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "DEV",
              "Name": "xpertGroup-eks-cluster",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "DEV",
              "Name": "xpertGroup-eks-cluster",
              "Terraform": "true"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available_zones",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:354935533189:internet-gateway/igw-02a4119855afec25e",
            "id": "igw-02a4119855afec25e",
            "owner_id": "354935533189",
            "tags": {
              "Environment": "DEV",
              "Name": "xpertGroup-eks-cluster",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "DEV",
              "Name": "xpertGroup-eks-cluster",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0ba44886c6f5dc02a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08ff67a60dbfdf66a",
            "association_id": "eipassoc-0f098942d50fea55d",
            "connectivity_type": "public",
            "id": "nat-065f793b075e3bbdd",
            "network_interface_id": "eni-05f210ee86c8959ca",
            "private_ip": "10.0.4.204",
            "public_ip": "100.51.159.151",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0b7544d1c16b7b12f",
            "tags": {
              "Environment": "DEV",
              "Name": "xpertGroup-eks-cluster",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "DEV",
              "Name": "xpertGroup-eks-cluster",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available_zones",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-01b42296977912faf1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-065f793b075e3bbdd",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01b42296977912faf",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available_zones",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-02a4119855afec25e",
            "id": "r-rtb-02f1d2f407689cbac1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02f1d2f407689cbac",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available_zones",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:354935533189:route-table/rtb-01b42296977912faf",
            "id": "rtb-01b42296977912faf",
            "owner_id": "354935533189",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "DEV",
              "Name": "xpertGroup-eks-cluster",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "DEV",
              "Name": "xpertGroup-eks-cluster",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ba44886c6f5dc02a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available_zones",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:354935533189:route-table/rtb-02f1d2f407689cbac",
            "id": "rtb-02f1d2f407689cbac",
            "owner_id": "354935533189",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "DEV",
              "Name": "xpertGroup-eks-cluster",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "DEV",
              "Name": "xpertGroup-eks-cluster",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ba44886c6f5dc02a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available_zones",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06f592f1e2249a23f",
            "route_table_id": "rtb-01b42296977912faf",
            "subnet_id": "subnet-0bc6d0f5cb4184da1"
          },
          "dependencies": [
            "data.aws_availability_zones.available_zones",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-053eb8d29d60a2987",
            "route_table_id": "rtb-01b42296977912faf",
            "subnet_id": "subnet-0df606b56780fd891"
          },
          "dependencies": [
            "data.aws_availability_zones.available_zones",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09f7799be21e694bb",
            "route_table_id": "rtb-01b42296977912faf",
            "subnet_id": "subnet-0b5afb9fe17369d26"
          },
          "dependencies": [
            "data.aws_availability_zones.available_zones",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fcb9d2002479beeb",
            "route_table_id": "rtb-02f1d2f407689cbac",
            "subnet_id": "subnet-0b7544d1c16b7b12f"
          },
          "dependencies": [
            "data.aws_availability_zones.available_zones",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0da218b51a32ff4da",
            "route_table_id": "rtb-02f1d2f407689cbac",
            "subnet_id": "subnet-0254d9ea8f98217e3"
          },
          "dependencies": [
            "data.aws_availability_zones.available_zones",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07f6cf54387f53fe5",
            "route_table_id": "rtb-02f1d2f407689cbac",
            "subnet_id": "subnet-02cdea7acf3c81567"
          },
          "dependencies": [
            "data.aws_availability_zones.available_zones",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:354935533189:subnet/subnet-0bc6d0f5cb4184da1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bc6d0f5cb4184da1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "354935533189",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "DEV",
              "Name": "xpertGroup-eks-cluster",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "DEV",
              "Name": "xpertGroup-eks-cluster",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0ba44886c6f5dc02a"
          },
          "dependencies": [
            "data.aws_availability_zones.available_zones",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:354935533189:subnet/subnet-0df606b56780fd891",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0df606b56780fd891",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "354935533189",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "DEV",
              "Name": "xpertGroup-eks-cluster",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "DEV",
              "Name": "xpertGroup-eks-cluster",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0ba44886c6f5dc02a"
          },
          "dependencies": [
            "data.aws_availability_zones.available_zones",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:354935533189:subnet/subnet-0b5afb9fe17369d26",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b5afb9fe17369d26",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "354935533189",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "DEV",
              "Name": "xpertGroup-eks-cluster",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "DEV",
              "Name": "xpertGroup-eks-cluster",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0ba44886c6f5dc02a"
          },
          "dependencies": [
            "data.aws_availability_zones.available_zones",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:354935533189:subnet/subnet-0b7544d1c16b7b12f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b7544d1c16b7b12f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "354935533189",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "DEV",
              "Name": "xpertGroup-eks-cluster",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "DEV",
              "Name": "xpertGroup-eks-cluster",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0ba44886c6f5dc02a"
          },
          "dependencies": [
            "data.aws_availability_zones.available_zones",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:354935533189:subnet/subnet-0254d9ea8f98217e3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0254d9ea8f98217e3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "354935533189",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "DEV",
              "Name": "xpertGroup-eks-cluster",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "DEV",
              "Name": "xpertGroup-eks-cluster",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0ba44886c6f5dc02a"
          },
          "dependencies": [
            "data.aws_availability_zones.available_zones",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:354935533189:subnet/subnet-02cdea7acf3c81567",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02cdea7acf3c81567",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "354935533189",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "DEV",
              "Name": "xpertGroup-eks-cluster",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "DEV",
              "Name": "xpertGroup-eks-cluster",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0ba44886c6f5dc02a"
          },
          "dependencies": [
            "data.aws_availability_zones.available_zones",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:354935533189:vpc/vpc-0ba44886c6f5dc02a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0aed4dba266afc7e5",
            "default_route_table_id": "rtb-030b2e93718c48e83",
            "default_security_group_id": "sg-05ff35f64abd276a0",
            "dhcp_options_id": "dopt-0457bedf2fb11152c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ba44886c6f5dc02a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-030b2e93718c48e83",
            "owner_id": "354935533189",
            "tags": {
              "Environment": "DEV",
              "Name": "xpertGroup-eks-cluster",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "DEV",
              "Name": "xpertGroup-eks-cluster",
              "Terraform": "true"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}